[package]
name = "legion-task"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2018"

description = "Fork-join multitasking for Legion ECS"
license = "MIT"
repository = "https://github.com/bonsairobo/legion-task.git"

[dependencies]
itertools = "0.8.2"
legion = "0.2.4"
log = "0.4.11"

[dev-dependencies]
simple_logger = "1.6.0"
